docs_DATA = README README.OSX TODO INSTALL API COPYING USAGE AUTHORS NEWS
docsdir = ${prefix}/share/doc/${PACKAGE}-${VERSION}

man_MANS = doc/freej.1

dist_pkgdata_DATA = \
	README \
	COPYING \
	AUTHORS \
	doc/ipernav.png

#pkgdatadir = ${prefix}/share/freej

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = freej.pc

SUBDIRS = lib src bindings scripts
