dist_docs_DATA = README README.OSX TODO INSTALL API COPYING USAGE AUTHORS NEWS KNOWN-BUGS
docsdir = ${prefix}/share/doc/${PACKAGE}

#pkgdatadir = ${prefix}/share/freej

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = freej.pc

SUBDIRS = lib src doc scripts tests

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = freej.spec xcode qt
